# Project_1-production-fraud-rules

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  interview_questions.md  junior_learning_path.md  learning_notes.md  project_prompt_template.md  pyproject.toml  requirements.txt  tradeoffs.md
config/: rules.yaml
src/fraud_rules_engine/: __init__.py  audit.py  cli.py  config.py  data_generation.py  decision.py  engine.py  models.py  reporting.py
src/fraud_rules_engine/rules/: __init__.py  amount_rules.py  base.py  customer_rules.py  device_rules.py  merchant_rules.py
tests/: test_decision.py  test_engine.py  test_models.py  test_reporting.py  test_rules.py
