[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fraud-rules-engine"
version = "0.1.0"
description = "Production-style configurable fraud rules engine for BNPL transactions."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6,<3",
    "PyYAML>=6.0,<7",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=4.0,<5",
    "pytest>=8.0,<9",
    "ruff>=0.5,<1",
]

[project.scripts]
fraud-rules-engine = "fraud_rules_engine.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
